<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="Name"/>

    <TextView
        android:id="@+id/toppingTextView"
        style="@style/HeaderTextStyle"
        android:text="@string/toppings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/whippedCreamCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/whipped_cream" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chocolateCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/chocolate" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/HeaderTextStyle"
        android:text="@string/coffee_cups" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/incrementButton"
        android:layout_width="52dp"
        android:layout_height="42dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="16dp"
        android:onClick="increment"
        android:text="@string/add" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/incrementButton"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/startNumber"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
        android:id="@+id/decrementButton"
        android:layout_width="52dp"
        android:layout_height="42dp"
        android:layout_below="@id/quantityTextView"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="decrement"
            android:textColor="#000000"
        android:text="@string/minus" />

</LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/order_summary_text_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/decrementButton"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="Order summary" />-->

<!--    <TextView-->
<!--        android:id="@+id/summaryTextView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/order_summary_text_view"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="$10"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="16sp" />-->

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summaryTextView"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order" />

</LinearLayout>